// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox basic 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="Checkboxstory__PageLayout-paumea-0 bpjQDn"
    >
      <div
        class="checkboxstyle__CheckboxStyle-jtw5sa-0 doWUJy"
      >
        <input
          id="newsletter"
          name="newsletter"
          type="checkbox"
          value=""
        />
        <label
          for="newsletter"
          id="newsletter"
        />
        <div
          class="content"
        >
          Sign up newsletter
        </div>
      </div>
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Checkbox
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            basic
          </h2>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="display:flex;justify-content:space-between;align-items:center;font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;ForwardRef
                  </span>
                  <span />
                  <span
                    style="color:#444"
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;StyledComponent
                    </span>
                    <span>
                      <span>
                         
                        <span>
                          forwardedComponent
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#666"
                            >
                              {
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  $$typeof
                                </span>
                              </span>
                              : 
                              <span>
                                …
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  render
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#170"
                              >
                                anonymous
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  attrs
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#666"
                              >
                                []
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                …
                              </span>
                              <span>
                                <br />
                                  
                              </span>
                              }
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span>
                          forwardedRef
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#444"
                            >
                              null
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      style="color:#444"
                    >
                      &gt;
                    </span>
                  </div>
                  <div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;Checkbox
                      </span>
                      <span>
                        <span>
                           
                          <span>
                            id
                          </span>
                          <span>
                            =
                            <span>
                              "
                              <span
                                style="color:#22a;word-break:break-word"
                              >
                                newsletter
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span>
                            name
                          </span>
                          <span>
                            =
                            <span>
                              "
                              <span
                                style="color:#22a;word-break:break-word"
                              >
                                newsletter
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span
                        style="color:#444"
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style="padding-left:63px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        Sign up newsletter
                      </span>
                    </div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;/Checkbox&gt;
                      </span>
                    </div>
                  </div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;/StyledComponent&gt;
                    </span>
                  </div>
                </div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;/ForwardRef&gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              style="background-color:rgb(255, 255, 255);cursor:pointer;font-size:13px;align-self:flex-start;flex-shrink:0;overflow:hidden;border-width:1px;border-style:solid;border-color:rgb(238, 238, 238);border-image:initial;border-radius:3px;padding:3px 10px"
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "Checkbox" Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    property
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    propType
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    required
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    default
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    id
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    yes
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    children
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      node
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    yes
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    optional
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      bool
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      false
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    value
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    name
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "StyledComponent" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox optional 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="Checkboxstory__PageLayout-paumea-0 bpjQDn"
    >
      <div
        class="checkboxstyle__CheckboxStyle-jtw5sa-0 doWUJy"
      >
        <input
          id="newsletter"
          name="newsletter"
          type="checkbox"
          value=""
        />
        <label
          for="newsletter"
          id="newsletter"
        />
        <div
          class="content"
        >
          Sign up newsletter
        </div>
        <span
          class="optional"
        >
          *optional
        </span>
      </div>
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Checkbox
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            optional
          </h2>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="display:flex;justify-content:space-between;align-items:center;font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;ForwardRef
                  </span>
                  <span />
                  <span
                    style="color:#444"
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;StyledComponent
                    </span>
                    <span>
                      <span>
                         
                        <span>
                          forwardedComponent
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#666"
                            >
                              {
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  $$typeof
                                </span>
                              </span>
                              : 
                              <span>
                                …
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  render
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#170"
                              >
                                anonymous
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  attrs
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#666"
                              >
                                []
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                …
                              </span>
                              <span>
                                <br />
                                  
                              </span>
                              }
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span>
                          forwardedRef
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#444"
                            >
                              null
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      style="color:#444"
                    >
                      &gt;
                    </span>
                  </div>
                  <div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;Checkbox
                      </span>
                      <span>
                        <span>
                           
                          <span>
                            id
                          </span>
                          <span>
                            =
                            <span>
                              "
                              <span
                                style="color:#22a;word-break:break-word"
                              >
                                newsletter
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span>
                            name
                          </span>
                          <span>
                            =
                            <span>
                              "
                              <span
                                style="color:#22a;word-break:break-word"
                              >
                                newsletter
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span>
                            optional
                          </span>
                        </span>
                      </span>
                      <span
                        style="color:#444"
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style="padding-left:63px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        Sign up newsletter
                      </span>
                    </div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;/Checkbox&gt;
                      </span>
                    </div>
                  </div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;/StyledComponent&gt;
                    </span>
                  </div>
                </div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;/ForwardRef&gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              style="background-color:rgb(255, 255, 255);cursor:pointer;font-size:13px;align-self:flex-start;flex-shrink:0;overflow:hidden;border-width:1px;border-style:solid;border-color:rgb(238, 238, 238);border-image:initial;border-radius:3px;padding:3px 10px"
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "Checkbox" Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    property
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    propType
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    required
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    default
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    id
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    yes
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    children
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      node
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    yes
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    optional
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      bool
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      false
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    value
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    name
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "StyledComponent" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
